syntax = "proto3";

package github.es.customer.v1;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "customer";
option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

service CustomerService {
  rpc GetCustomer (GetCustomerRequest) returns (CustomerResponse);
}

message Customer {
  string id = 1;
  int32 version = 2;
  string name = 3;
  string created_at = 4; // timestamp in iso format
  string updated_at = 5; // timestamp in iso format
}

message CustomerResponse {
  Customer customer = 1;
}

message GetCustomerRequest {
  string id = 1;
}